# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  29 Nov 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add po/Makefile, based mostly on work done by Rach Holmes <Rach.Holmes@GMX.net>
    and James Rowe <Jay@jnrowe.uklinux.net> since Mike changed most rc-scripts to
    support it.

  28 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed fallback_routes, #113776.
    Fixed variable array references, #113661.
    Fixed iwconfig mode selection, #113677 - thanks to Tuan Van.    
    Fixed iproute2 is_up check, #113672 - thanks to Georgi Georgiev. 
    Added information about the "broken" status as reported by rc-status to
    its output, #113755.

  27 Nov 2005; Mike Frysinger <vapier@gentoo.org>:

    Don't set default RC_VOLUME_ORDER anymore in functions.sh #113700.

  24 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    ifconfig routes now work with metrics and older configs again
    #113378 and #113406.

    arping now works with multiple gateways, #113402.

    pppd module now updates an emply secrets file, #113431.

    use ${svclib} instead of hardcoding /lib/rcscripts.

* baselayout-1.12.0_pre11 (23 Nov 2005)

  23 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    RC_KILL_CHILDREN now defaults to "no". This stops ssh children being
    killed when a network interface is restarted.

    macchanger now ensures the interface is down before attempting to change
    the mac address, #112333.

  22 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    Stop ifplugd and netplugd from operating on bonded and vlan interfaces.

  21 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    Fix wpa_suppicant error when auth is IEEE 802.1X (NO WPA) #112938.
 
  20 Nov 2005; Mike Frysinger <vapier@gentoo.org>:

    Call reboot with -k to support people who want to use kexec #80220.

    Source /etc/profile.d/*.sh files in /etc/profile #4854.

  18 Nov 2005; Roy Marples <uberlord@gentoo.org>:
